// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing Header Component renders correctly LoggedIn 1`] = `
.emotion-0 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: -webkit-sticky;
  position: sticky;
  z-index: 1100;
  top: 0;
  left: auto;
  right: 0;
  background-color: transparent;
  color: inherit;
  background-color: #fff;
}

.emotion-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  min-height: 56px;
  padding-top: 8px;
  padding-bottom: 8px;
}

@media (min-width:600px) {
  .emotion-1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:0px) and (orientation: landscape) {
  .emotion-1 {
    min-height: 48px;
  }
}

@media (min-width:600px) {
  .emotion-1 {
    min-height: 64px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 66.666667%;
  -ms-flex-preferred-size: 66.666667%;
  flex-basis: 66.666667%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 66.666667%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

@media (min-width:600px) {
  .emotion-3 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 50%;
  }
}

@media (min-width:0px) {
  .emotion-3 {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

@media (min-width:600px) {
  .emotion-3 {
    margin-top: 0rem;
    margin-bottom: 0rem;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-4 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 300;
  font-size: 6rem;
  line-height: 1.167;
  letter-spacing: -0.01562em;
  margin-left: 8px;
  margin-right: 8px;
  white-space: nowrap;
}

.emotion-4.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -16px;
  width: calc(100% + 16px);
  margin-left: -16px;
  -webkit-flex-basis: calc(33.333333% + 16px);
  -ms-flex-preferred-size: calc(33.333333% + 16px);
  flex-basis: calc(33.333333% + 16px);
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: calc(33.333333% + 16px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5>.MuiGrid-item {
  padding-top: 16px;
}

.emotion-5>.MuiGrid-item {
  padding-left: 16px;
}

@media (min-width:600px) {
  .emotion-5 {
    -webkit-flex-basis: calc(50% + 16px);
    -ms-flex-preferred-size: calc(50% + 16px);
    flex-basis: calc(50% + 16px);
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: calc(50% + 16px);
  }
}

@media (min-width:0px) {
  .emotion-5 {
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

@media (min-width:600px) {
  .emotion-5 {
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    -webkit-justify-content: flex-end;
    justify-content: flex-end;
  }
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-7.hasBackground {
  background-color: rgba(29, 34, 39, 0.04);
}

.emotion-7.xs {
  width: 24px;
  height: 24px;
}

.emotion-7.sm {
  width: 32px;
  height: 32px;
}

.emotion-7.md {
  width: 40px;
  height: 40px;
}

.emotion-7.lg {
  width: 48px;
  height: 48px;
}

.emotion-7.xl {
  width: 64px;
  height: 64px;
}

.emotion-7.xxl {
  width: 80px;
  height: 80px;
}

.emotion-7.max {
  width: 144px;
  height: 144px;
}

.emotion-8 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

<header
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionSticky emotion-0"
>
  <div
    className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular wrapper emotion-1"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-undefined emotion-2"
    >
      <div
        aria-hidden="true"
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-undefined MuiGrid-grid-xs-8 MuiGrid-grid-sm-6 emotion-3"
      >
        <svg
          height={40}
          version="1.1"
          viewBox="0 0 64 64"
          width={40}
        >
          <defs />
          <g
            fill="none"
            fillOpacity="1"
            id="Canvas_1"
            stroke="none"
            strokeDasharray="none"
            strokeOpacity="1"
          >
            <g
              id="Canvas_1: Layer 1"
            >
              <g
                id="Group_2"
              >
                <g
                  id="Graphic_4"
                >
                  <path
                    d="M 36.838337 54.467 C 33.612306 54.467 31.26262 53.69488 29.786447 52.15064 C 28.31169 50.60711 27.573602 48.942334 27.573602 47.158445 C 27.573602 46.50615 27.701934 45.95737 27.959308 45.511397 C 28.210414 45.071363 28.575002 44.706776 29.015035 44.45567 C 29.461007 44.198296 30.009787 44.069964 30.662084 44.069964 C 31.31438 44.069964 31.86245 44.198296 32.30913 44.45567 C 32.755104 44.713043 33.106777 45.065425 33.36415 45.511397 C 33.621524 45.95737 33.749856 46.50615 33.749856 47.158445 C 33.749856 47.94758 33.561257 48.59066 33.18406 49.08839 C 32.806153 49.58612 32.36018 49.91156 31.845434 50.066836 C 32.292115 50.68368 32.99546 51.121145 33.95618 51.37852 C 34.9169 51.65362 35.87762 51.79046 36.838337 51.79046 C 38.176254 51.79046 39.38584 51.43028 40.46709 50.709915 C 41.547633 49.988844 42.345987 48.92532 42.860734 47.518626 C 43.37548 46.111935 43.632854 44.515936 43.632854 42.73134 C 43.632854 40.792884 43.349247 39.13662 42.78345 37.76467 C 42.23396 36.374994 41.4193 35.3455 40.33805 34.676188 C 39.290176 34.016757 38.076428 33.668813 36.838337 33.672927 C 36.01446 33.672927 34.985674 34.01609 33.749856 34.70242 L 31.485253 35.834723 L 31.485253 34.70242 L 41.676674 21.114096 L 27.573602 21.114096 L 27.573602 35.21646 C 27.573602 36.383502 27.830976 37.34422 28.345723 38.099325 C 28.86047 38.85443 29.649606 39.231627 30.71384 39.231627 C 31.536302 39.231627 32.32615 38.957237 33.081252 38.40775 C 33.841203 37.85355 34.50229 37.175206 35.036723 36.401228 C 35.105498 36.245953 35.19129 36.134637 35.294096 36.065862 C 35.386573 35.98421 35.505393 35.938645 35.628753 35.93753 C 35.81735 35.93753 36.039983 36.03183 36.298066 36.221137 C 36.538423 36.49482 36.658247 36.81246 36.658247 37.17264 C 36.62871 37.415214 36.58563 37.655947 36.529205 37.89371 C 35.946393 39.197594 35.13953 40.192346 34.110037 40.878675 C 33.10778 41.556656 31.92385 41.915543 30.71384 41.90817 C 27.659393 41.90817 25.548647 41.30763 24.382313 40.107263 C 23.21598 38.90548 22.632457 37.275447 22.632457 35.21717 L 22.632457 21.114096 L 15.426001 21.114096 L 15.426001 18.488603 L 22.632457 18.488603 L 22.632457 12.518674 L 20.98541 10.870207 L 20.98541 9.533 L 25.771988 9.533 L 27.572893 10.458977 L 27.572893 18.488603 L 46.20588 18.437554 L 48.05925 20.290217 L 36.63272 31.716747 C 37.32448 31.441028 38.052734 31.267622 38.794517 31.202 C 40.029626 31.202 41.4193 31.596923 42.96354 32.38606 C 44.5248 33.15818 45.725875 34.222416 46.56606 35.57664 C 47.406956 36.915266 47.94723 38.202133 48.187584 39.43724 C 48.44496 40.67306 48.574 41.77062 48.574 42.73134 C 48.574 44.927875 48.1103 46.96914 47.184324 48.85725 C 46.25764 50.74395 44.850947 52.15064 42.96354 53.077325 C 41.076136 54.00401 39.034165 54.467 36.838337 54.467 Z"
                    fill="#2c7df7"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <h1
          className="MuiTypography-root MuiTypography-h1  emotion-4"
          lines={3}
        >
          Prediction Market
        </h1>
      </div>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-grid-xs-4 MuiGrid-grid-sm-6 emotion-5"
      >
        <div
          className="MuiGrid-root MuiGrid-item emotion-6"
        >
          <div
            className="MuiAvatar-root MuiAvatar-circular xl hasBackground emotion-7"
            onClick={[Function]}
          >
            <img
              className="MuiAvatar-img emotion-8"
              src="https://services.tzkt.io/v1/avatars2/tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Snapshot testing Header Component renders correctly LoggedOut 1`] = `
.emotion-0 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: -webkit-sticky;
  position: sticky;
  z-index: 1100;
  top: 0;
  left: auto;
  right: 0;
  background-color: transparent;
  color: inherit;
  background-color: #fff;
}

.emotion-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  min-height: 56px;
  padding-top: 8px;
  padding-bottom: 8px;
}

@media (min-width:600px) {
  .emotion-1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:0px) and (orientation: landscape) {
  .emotion-1 {
    min-height: 48px;
  }
}

@media (min-width:600px) {
  .emotion-1 {
    min-height: 64px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 66.666667%;
  -ms-flex-preferred-size: 66.666667%;
  flex-basis: 66.666667%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 66.666667%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

@media (min-width:600px) {
  .emotion-3 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 50%;
  }
}

@media (min-width:0px) {
  .emotion-3 {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

@media (min-width:600px) {
  .emotion-3 {
    margin-top: 0rem;
    margin-bottom: 0rem;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

.emotion-4 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 300;
  font-size: 6rem;
  line-height: 1.167;
  letter-spacing: -0.01562em;
  margin-left: 8px;
  margin-right: 8px;
  white-space: nowrap;
}

.emotion-4.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -16px;
  width: calc(100% + 16px);
  margin-left: -16px;
  -webkit-flex-basis: calc(33.333333% + 16px);
  -ms-flex-preferred-size: calc(33.333333% + 16px);
  flex-basis: calc(33.333333% + 16px);
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: calc(33.333333% + 16px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5>.MuiGrid-item {
  padding-top: 16px;
}

.emotion-5>.MuiGrid-item {
  padding-left: 16px;
}

@media (min-width:600px) {
  .emotion-5 {
    -webkit-flex-basis: calc(50% + 16px);
    -ms-flex-preferred-size: calc(50% + 16px);
    flex-basis: calc(50% + 16px);
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: calc(50% + 16px);
  }
}

@media (min-width:0px) {
  .emotion-5 {
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

@media (min-width:600px) {
  .emotion-5 {
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    -webkit-justify-content: flex-end;
    justify-content: flex-end;
  }
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.8125rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 4px 10px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #fff;
  background-color: #1976d2;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  margin-left: 1em;
  width: inherit;
  border-radius: 0.2em;
  padding: 0.2em 1.2em;
  border: solid 2px transparent;
  box-shadow: none;
}

.emotion-7::-moz-focus-inner {
  border-style: none;
}

.emotion-7.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-7 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #1565c0;
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
}

@media (hover: none) {
  .emotion-7:hover {
    background-color: #1976d2;
  }
}

.emotion-7:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.emotion-7.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-7.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-7:hover {
  border-width: 2px!important;
  box-shadow: none;
}

.emotion-7:disabled {
  border-color: transparent;
}

.emotion-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
}

.emotion-8.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

<header
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionSticky emotion-0"
>
  <div
    className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular wrapper emotion-1"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-undefined emotion-2"
    >
      <div
        aria-hidden="true"
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-undefined MuiGrid-grid-xs-8 MuiGrid-grid-sm-6 emotion-3"
      >
        <svg
          height={40}
          version="1.1"
          viewBox="0 0 64 64"
          width={40}
        >
          <defs />
          <g
            fill="none"
            fillOpacity="1"
            id="Canvas_1"
            stroke="none"
            strokeDasharray="none"
            strokeOpacity="1"
          >
            <g
              id="Canvas_1: Layer 1"
            >
              <g
                id="Group_2"
              >
                <g
                  id="Graphic_4"
                >
                  <path
                    d="M 36.838337 54.467 C 33.612306 54.467 31.26262 53.69488 29.786447 52.15064 C 28.31169 50.60711 27.573602 48.942334 27.573602 47.158445 C 27.573602 46.50615 27.701934 45.95737 27.959308 45.511397 C 28.210414 45.071363 28.575002 44.706776 29.015035 44.45567 C 29.461007 44.198296 30.009787 44.069964 30.662084 44.069964 C 31.31438 44.069964 31.86245 44.198296 32.30913 44.45567 C 32.755104 44.713043 33.106777 45.065425 33.36415 45.511397 C 33.621524 45.95737 33.749856 46.50615 33.749856 47.158445 C 33.749856 47.94758 33.561257 48.59066 33.18406 49.08839 C 32.806153 49.58612 32.36018 49.91156 31.845434 50.066836 C 32.292115 50.68368 32.99546 51.121145 33.95618 51.37852 C 34.9169 51.65362 35.87762 51.79046 36.838337 51.79046 C 38.176254 51.79046 39.38584 51.43028 40.46709 50.709915 C 41.547633 49.988844 42.345987 48.92532 42.860734 47.518626 C 43.37548 46.111935 43.632854 44.515936 43.632854 42.73134 C 43.632854 40.792884 43.349247 39.13662 42.78345 37.76467 C 42.23396 36.374994 41.4193 35.3455 40.33805 34.676188 C 39.290176 34.016757 38.076428 33.668813 36.838337 33.672927 C 36.01446 33.672927 34.985674 34.01609 33.749856 34.70242 L 31.485253 35.834723 L 31.485253 34.70242 L 41.676674 21.114096 L 27.573602 21.114096 L 27.573602 35.21646 C 27.573602 36.383502 27.830976 37.34422 28.345723 38.099325 C 28.86047 38.85443 29.649606 39.231627 30.71384 39.231627 C 31.536302 39.231627 32.32615 38.957237 33.081252 38.40775 C 33.841203 37.85355 34.50229 37.175206 35.036723 36.401228 C 35.105498 36.245953 35.19129 36.134637 35.294096 36.065862 C 35.386573 35.98421 35.505393 35.938645 35.628753 35.93753 C 35.81735 35.93753 36.039983 36.03183 36.298066 36.221137 C 36.538423 36.49482 36.658247 36.81246 36.658247 37.17264 C 36.62871 37.415214 36.58563 37.655947 36.529205 37.89371 C 35.946393 39.197594 35.13953 40.192346 34.110037 40.878675 C 33.10778 41.556656 31.92385 41.915543 30.71384 41.90817 C 27.659393 41.90817 25.548647 41.30763 24.382313 40.107263 C 23.21598 38.90548 22.632457 37.275447 22.632457 35.21717 L 22.632457 21.114096 L 15.426001 21.114096 L 15.426001 18.488603 L 22.632457 18.488603 L 22.632457 12.518674 L 20.98541 10.870207 L 20.98541 9.533 L 25.771988 9.533 L 27.572893 10.458977 L 27.572893 18.488603 L 46.20588 18.437554 L 48.05925 20.290217 L 36.63272 31.716747 C 37.32448 31.441028 38.052734 31.267622 38.794517 31.202 C 40.029626 31.202 41.4193 31.596923 42.96354 32.38606 C 44.5248 33.15818 45.725875 34.222416 46.56606 35.57664 C 47.406956 36.915266 47.94723 38.202133 48.187584 39.43724 C 48.44496 40.67306 48.574 41.77062 48.574 42.73134 C 48.574 44.927875 48.1103 46.96914 47.184324 48.85725 C 46.25764 50.74395 44.850947 52.15064 42.96354 53.077325 C 41.076136 54.00401 39.034165 54.467 36.838337 54.467 Z"
                    fill="#2c7df7"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <h1
          className="MuiTypography-root MuiTypography-h1  emotion-4"
          lines={3}
        >
          Prediction Market
        </h1>
      </div>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-grid-xs-4 MuiGrid-grid-sm-6 emotion-5"
      >
        <div
          className="MuiGrid-root MuiGrid-item emotion-6"
        >
          <button
            bordercolor="transparent"
            className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButtonBase-root emotion-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <h3
              className="MuiTypography-root MuiTypography-h3  emotion-8"
              lines={3}
            >
              Sign in
            </h3>
          </button>
        </div>
      </div>
    </div>
  </div>
</header>
`;
